--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
  (Format: Year/Month/Day)
 
+Changes for 2023-1.1:
+
+23/10/23
+    * Fix: Remember logic for [group] tabs
+    * Fix: head clamp logic for Screen::requestStrut
+    * Fix: defunct value in example 'init' config
+
 -----------------------------
 Changes from Fluxbox 1.3.7 to Shynebox 2023-1.0:
 
